--- a/packages/frontend/src/components/mbc/summary/Summary.scss
+++ b/packages/frontend/src/components/mbc/summary/Summary.scss
@@ -39,6 +39,124 @@
   }
 }
 
+.bucketColContent {
+  .bucketColContentEmpty {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #383f49;
+    margin-top: -9px;
+    h6 {
+      font-size: var(--font-size-smallest);
+      font-weight: initial;
+      margin: 0;
+    }
+  }
+  .bucketColContentList {
+    font-size: var(--font-size-smallest);
+    border: 1px solid #383f49;
+    margin-top: 12px;
+    padding: 20px 12px 0;
+    .bucketColContentListAdd {
+      margin: 13px auto;
+      width: 90%;
+
+      .userExistedError {
+        color: #e84d47;
+        padding: 4px 0;
+      }
+    }
+    .bucketColUsersList {
+      margin-top: 12px;
+      width: 90%;
+      margin: 0 auto;
+      margin-top: 12px;
+      margin-bottom: 15px;
+
+      .collUserTitle {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #383f49;
+        .collUserTitleCol {
+          &:first-child {
+            max-width: 150px;
+          }
+          flex: 1;
+          font-size: var(--font-size-smallest);
+          padding-right: 12px;
+          color: #99a5b3;
+        }
+      }
+      .collUserContent {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: flex-start;
+        overflow: auto;
+        width: 100%;
+        .collUserContentRow {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          .collUserTitleCol {
+            &:first-child {
+              max-width: 150px;
+            }
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            flex: 1;
+            font-size: var(--font-size-smallest);
+            padding-right: 15px;
+            word-break: break-word;
+            color: #99a5b3;
+            label {
+              cursor: pointer;
+            }
+            span {
+              color: #99a5b3;
+            }
+
+            .deleteEntry {
+              cursor: pointer;
+              margin-right: 20px;
+            }
+            .writeAccess {
+              cursor: pointer;
+            }
+            input {
+              opacity: unset !important;
+              position: initial;
+              z-index: unset !important;
+            }
+            .inputGrp {
+              margin-top: 8px;
+              min-height: auto !important;
+              &:first-child {
+                margin-left: -10px;
+              }
+              min-width: 80px;
+            }
+            i {
+              margin: -7px 7px 0 0;
+              right: 0;
+            }
+            div {
+              cursor: default;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 :global {
   #create-solution-tabs .scrollable.tabs-wrapper {
     height: 44px;
