--- a/packages/frontend/src/components/mbc/summary/Summary.scss
+++ b/packages/frontend/src/components/mbc/summary/Summary.scss
@@ -59,6 +59,7 @@
     border: 1px solid #383f49;
     margin-top: 12px;
     padding: 20px 12px 0;
+    min-height: 200px;
     .bucketColContentListAdd {
       margin: 13px auto;
       width: 90%;
@@ -99,6 +100,7 @@
         justify-content: flex-start;
         overflow: auto;
         width: 100%;
+        margin-top: 10px;
         .collUserContentRow {
           display: flex;
           align-items: center;
