enabled GenAI tile and fixed bugs

--- a/packages/frontend/src/components/card/Card.scss
+++ b/packages/frontend/src/components/card/Card.scss
@@ -252,4 +252,8 @@
         background-color: #0181BB;
         background-image: linear-gradient(198deg, #0181BB 5%, #252A33 100%);
     }
+    .genAI:hover {
+        background-color: #0181BB;
+        background-image: linear-gradient(198deg, #0181BB 5%, #252A33 100%);
+    }
 }
