GenAI summary page change and adding Direct chat Tile

--- a/packages/frontend/src/components/mbc/summary/datacompliance/DataComplianceSummary.scss
+++ b/packages/frontend/src/components/mbc/summary/datacompliance/DataComplianceSummary.scss
@@ -4,10 +4,11 @@
   .wrapper {
     background: #252a33;
     padding: 25px 40px;
+    margin-bottom: 15px;
     flex: 1 auto;
 
     h3 {
-      font-size: var(--font-size-default);
+      font-size: var(--font-size-headline-medium);
       margin-bottom: 30px;
     }
 
