--- a/packages/frontend/src/components/mbc/summary/milestones/MilestonesSummary.scss
+++ b/packages/frontend/src/components/mbc/summary/milestones/MilestonesSummary.scss
@@ -4,13 +4,13 @@
 
   .wrapper {
     background: #252a33;
-    margin-bottom: 0px;
+    margin-bottom: 15px;
     padding: 25px 0;
     flex: 1 auto;
 
     h3 {
       padding: 0 38px;
-      font-size: var(--font-size-default);
+      font-size: var(--font-size-headline-medium);
     }
   }
   .flexLayout {
