--- a/packages/frontend/src/components/mbc/allSolutions/solutionListRowItem/SolutionListRowItem.scss
+++ b/packages/frontend/src/components/mbc/allSolutions/solutionListRowItem/SolutionListRowItem.scss
@@ -17,6 +17,13 @@
   }
 }
 
+label{
+  color: #697582;
+  font-size: smaller;
+  margin-bottom: 0rem;
+  margin-right: 0.2rem;
+}
+
 .draftIndicatorCol {
   min-width: 60px;
 
