updated data product

--- a/packages/data-product-mfe/src/components/dataProduct/dataProductList.style.scss
+++ b/packages/data-product-mfe/src/components/dataProduct/dataProductList.style.scss
@@ -1,6 +1,8 @@
 .mainPanel {
     padding: 72px 75px 30px 75px;
-
+    p{
+        color:#99a5b3; 
+    }
     .wrapper {
         width: 100%;
         .caption {
