GenAI banner and new color theme for tiles

--- a/packages/frontend/src/components/card/Card.scss
+++ b/packages/frontend/src/components/card/Card.scss
@@ -253,7 +253,7 @@
         background-image: linear-gradient(198deg, #0181BB 5%, #252A33 100%);
     }
     .genAI:hover {
-        background-color: #0181BB;
-        background-image: linear-gradient(198deg, #0181BB 5%, #252A33 100%);
+        background-color: #3af09a;
+        background-image: linear-gradient(198deg, #3af09a 5%, #252A33 100%);
     }
 }
