config file recommendation frontend changes

--- a/packages/chronos-mfe/src/components/runForecastTab/runParametersForm/run-parameters-form.scss
+++ b/packages/chronos-mfe/src/components/runForecastTab/runParametersForm/run-parameters-form.scss
@@ -77,3 +77,9 @@ margin: 0;
 input[type=number] {
 appearance: textfield;
 }
+.customConfigContainer {
+    margin-top: 20px;
+    p {
+        margin-bottom: 15px;
+    }
+}
