--- a/packages/frontend/src/components/mbc/codeSpace/CodeSpace.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/CodeSpace.scss
@@ -257,6 +257,26 @@
             text-decoration: none;
           }
         } 
+
+        .configLink {
+          cursor: pointer;
+          padding-right: 15px;
+          text-align: right;
+          display: flex;
+          align-items: center;
+          line-height: 10px;
+          i {
+            font-size: var(--font-size-icon-medium);
+            vertical-align: middle;
+            &:nth-child(2) {
+              font-size: var(--font-size-default) !important;
+              vertical-align: top !important;
+            }
+          }
+          > a:hover {
+            text-decoration: none;
+          }
+        } 
   
         .OpenNewTab {
           display: none;
