--- a/packages/frontend/src/components/mbc/createNewSolution/datacompliance/DataCompliance.scss
+++ b/packages/frontend/src/components/mbc/createNewSolution/datacompliance/DataCompliance.scss
@@ -54,6 +54,17 @@
   padding: 25px 38px;
 }
 
+.riskWrapper {
+  background: #252a33 !important;
+  margin-top: 15px !important;
+  padding: 25px 38px;
+
+  .radioLayout{
+    margin: 50px 70px 10px;
+  }
+
+}
+
 .contactWrapper {
   background: #252a33 !important;
   margin-top: 15px !important;
