--- a/packages/chronos-mfe/src/components/chronosProjectForm/ChronosProjectForm.scss
+++ b/packages/chronos-mfe/src/components/chronosProjectForm/ChronosProjectForm.scss
@@ -1,5 +1,6 @@
 .content {
   padding-top: 8px;
+  padding-right: 5px;
   .formGroup {
     .permissionField {
       display: flex;
@@ -24,22 +25,6 @@
 }
 .membersList {
   padding: 0 15px 0 0;
-  max-height: 225px;
-  min-height: 225px;
-  overflow-y: auto;
-  overflow-x: hidden;
-
-  &::-webkit-scrollbar-thumb {
-    background: #00adef;
-    border-radius: 10px;
-  }
-  &::-webkit-scrollbar-track {
-    background: #293f55;
-  }
-  &::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
-  }
 }
 .noMembers p {
   margin: 0;
