--- a/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
+++ b/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
@@ -106,6 +106,11 @@
     top: 50%;
     right: 50%;
   }
+
+  .showIcon {
+    margin-left:20px!important;
+    margin-right:10px!important;
+  }
   
   .emptyDataikuProjectsList {
     text-align: center;
