datalake ui improvements

--- a/packages/datalake-mfe/src/components/datalakeProjectForm/datalake-project-form.scss
+++ b/packages/datalake-mfe/src/components/datalakeProjectForm/datalake-project-form.scss
@@ -1,5 +1,8 @@
 .content {
   padding-top: 8px;
+  max-height: 75vh;
+  padding-right: 5px;
+  padding-bottom: 10px;
   .formGroup {
     .permissionField {
       display: flex;
