--- a/packages/chronos-mfe/src/components/runForecastTab/inputFileArea/input-file-area.scss
+++ b/packages/chronos-mfe/src/components/runForecastTab/inputFileArea/input-file-area.scss
@@ -12,16 +12,29 @@
     }
     .infoIcon {
         text-align: right;
-        font-size: var(--font-size-icon-medium);
-        margin-right: -23px;
         margin-top: -44px;
         float: right;
-        i {
+
+
+        .btnShowTutorial {
             cursor: pointer;
             color: #697582;
-  
+            background: unset;
+            border: unset;
+            display: flex;
+            align-items: center;
+            padding: 0;
+            line-height: unset;
+
             &:hover {
                 color: #00adef;
+            }
+            i {
+                font-size: var(--font-size-icon-medium);
+                height: unset;
+            }
+            p {
+                margin-bottom: 0;
             }
         }
     }
