Changes for implementing opensearch logs view on codespaces.

--- a/packages/frontend/src/components/mbc/codeSpace/codeSpaceCardItem/CodeSpaceCardItem.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/codeSpaceCardItem/CodeSpaceCardItem.scss
@@ -71,6 +71,10 @@
         }
         > div:last-child {
           flex: 1;
+          > a {
+            text-decoration: none;
+            margin-left: 10px;
+          }
         }
       }
       ul {
