datalake bug fixes

--- a/packages/datalake-mfe/src/pages/graph/graph.scss
+++ b/packages/datalake-mfe/src/pages/graph/graph.scss
@@ -338,12 +338,12 @@
         }
 
         &.editable:hover {
-            .field-type {
-                display: none;
-            }
-            .grip-setting {
-                display: block;
-            }
+            // .field-type {
+            //     display: none;
+            // }
+            // .grip-setting {
+            //     display: block;
+            // }
             .grip-setting-btn {
                 margin-left: 4px;
                 background: #323741;
