--- a/packages/frontend/src/components/mbc/codeSpace/manageCodeSpace/ManageCodeSpace.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/manageCodeSpace/ManageCodeSpace.scss
@@ -16,16 +16,16 @@
     width: calc(50% - 7px);
   }
 
-  .allConfigContent {
+  .allCodeSpace {
     margin-bottom: 15px;
     flex: 1 auto;
     position: relative;
 
-    .allConfigListviewContent {
+    .allcodeSpaceListviewContent {
       background-color: #252a33;
       padding-top: 6px;
 
-      .configsMarginnone {
+      .codeSpaceMargininone {
         position: relative;
         margin-top: 20px;
       }
@@ -46,5 +46,40 @@
     justify-content: center;
     position: relative;
     width: 100%;
+  }
+}
+#create-security-tabs .scrollable.tabs-wrapper {
+  height: 44px;
+}
+
+#create-security-tabs .scrollable.tabs-wrapper nav,
+#create-security-tabs .tabs {
+  height: 44px;
+}
+
+#manage-codeSpace-tabs .tab {
+  min-width: max-content;
+
+  >a {
+    position: relative;
+    padding: 10px 50px 12px 40px;
+
+    &::before {
+      font-family: 'dna-icons';
+      content: '\e949';
+      position: absolute;
+      right: 20px;
+      font-size: var(--font-size-icon-highlight);
+    }
+
+    sup {
+      font-size: 15px;
+      font-style: bold;
+      vertical-align: sub;
+    }
+  }
+
+  &.valid a::before {
+    color: #00adef;
   }
 }
