Changes for codespace build logs

--- a/packages/frontend/src/components/mbc/codeSpace/CodeSpace.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/CodeSpace.scss
@@ -107,6 +107,14 @@
             font-size: var(--font-size-icon-medium);
             vertical-align: middle;
           }
+
+          > div {
+            text-align: center;
+            a {
+              margin: 0;
+              font-size: var(--font-size-small);
+            }
+          }
         }
 
         div > a:hover {
@@ -253,6 +261,13 @@
           }
           > a:hover {
             text-decoration: none;
+          }
+          > div {
+            text-align: center;
+            a {
+              margin: 0;
+              font-size: var(--font-size-small);
+            }
           }
         } 
 
