Added workers council approval to the DataCompliance Tab

--- a/packages/frontend/src/components/mbc/createNewSolution/datacompliance/DataCompliance.scss
+++ b/packages/frontend/src/components/mbc/createNewSolution/datacompliance/DataCompliance.scss
@@ -54,11 +54,11 @@
   padding: 25px 38px;
 }
 
-.riskWrapper {
+.radioWrapper {
   background: #252a33 !important;
   margin-top: 15px !important;
   padding: 25px 38px;
-
+  
   .radioLayout{
     margin: 50px 70px 10px;
   }
