--- a/packages/frontend/src/components/mbc/createNewSolution/datacompliance/DataCompliance.scss
+++ b/packages/frontend/src/components/mbc/createNewSolution/datacompliance/DataCompliance.scss
@@ -54,12 +54,12 @@
   padding: 25px 38px;
 }
 
-.radioWrapper {
+.sectionWrapper {
   background: #252a33 !important;
   margin-top: 15px !important;
   padding: 25px 38px;
   
-  .radioLayout{
+  .sectionLayout{
     margin: 50px 70px 10px;
   }
 
