datalake how to connect changes

--- a/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
+++ b/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
@@ -145,4 +145,14 @@
       cursor: not-allowed;
     }
   }
+
+  .dbHighlight {
+    font-size: 14px;
+  }
+  .trinoConnectDiv {
+    display: flex;
+    > div {
+      min-width: 50%;
+    }
+  }
   
