--- a/packages/frontend/src/components/mbc/codeSpace/securityConfig/roles/Roles.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/securityConfig/roles/Roles.scss
@@ -580,6 +580,13 @@
 
 .editCreateModal {
   margin: 25px;
+  .inlineTextField{
+    display: flex !important;
+    justify-content: space-between !important;
+    >div {
+      width: calc(50% - 7px) !important;
+    }  
+  }
 }
 
 .AddorUpdatebtn {
