--- a/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
+++ b/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
@@ -55,7 +55,7 @@
       min-height: 250px;
   
       .dataikuConnectionBtn {
-        align-self: flex-end;
+        text-align: right;
         button:disabled {
           background-color: #697582;
           border-color: transparent;
@@ -80,9 +80,9 @@
       overflow: auto;
     }
     .restAPIContent {
-      label {
-        font-size: var(--font-size-sub-headline);
-      }
+      // label {
+      //   font-size: var(--font-size-sub-headline);
+      // }
       ul > li> ul {
         margin-bottom: 10px;
       }
@@ -153,5 +153,8 @@
     > div {
       min-width: 50%;
     }
+  }
+  .dataikuSection {
+    max-width: 50%;
   }
   
