datalake how to connect changes

--- a/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
+++ b/packages/datalake-mfe/src/components/connectionInfo/ConnectionModel.scss
@@ -157,4 +157,9 @@
   .dataikuSection {
     max-width: 50%;
   }
+  .underLine {
+    width: 35%;
+    border-bottom: 1px solid #52575f;
+    padding-bottom: 10px;
+  }
   
