Codespace UI changes

--- a/packages/frontend/src/components/mbc/codeSpace/CodeSpace.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/CodeSpace.scss
@@ -118,6 +118,10 @@
           }
         }
 
+        a.error {
+          color: #e84d47;
+        }
+
         div > a:hover {
           text-decoration: none;
         }
