--- a/packages/frontend/src/components/mbc/codeSpace/codeSpaceRecipe/CodeSpaceRecipe.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/codeSpaceRecipe/CodeSpaceRecipe.scss
@@ -126,4 +126,42 @@
   }
 }
 
+.teamListWrapper {
+  margin: 8px -25px 0 -35px;
+
+  .avatarIcon {
+    width: 55px;
+    height: 55px;
+  }
+
+  .addTeamMemberWrapper {
+    min-height: 68px;
+    padding-left: 40px;
+
+    button {
+      padding: 0;
+      margin: 0 0 0 30px;
+      background: none;
+      border: none;
+      outline: none;
+      color: #c0c8d0;
+      vertical-align: middle;
+
+      i {
+        vertical-align: top;
+        margin-right: 10px;
+        color: #00adef;
+      }
+
+      &:hover span {
+        text-decoration: underline; 
+      }
+    }
+  }
+}
+
+.collabAvatar {
+  padding: 0 25px 25px 0;
+  overflow-x: hidden;
+}
 
