--- a/packages/frontend/src/components/mbc/codeSpace/codeSpaceCardItem/CodeSpaceCardItem.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/codeSpaceCardItem/CodeSpaceCardItem.scss
@@ -46,7 +46,9 @@
         display: inline-block;
         padding: 2px 10px;
         position: relative;
-        z-index: 10;
+        &.open {
+          z-index: 10;
+        }
         cursor: pointer;
         &:hover {
           color: #00adef;
