Entitlement Window validations

--- a/packages/frontend/src/components/mbc/codeSpace/securityConfig/entitlement/EditOrCreateEntitlement.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/securityConfig/entitlement/EditOrCreateEntitlement.scss
@@ -625,6 +625,7 @@
   display: flex !important;
   justify-content: flex-start !important;
   margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 .DeleteDag {
