--- a/packages/frontend/src/components/mbc/codeSpace/securityConfig/entitlement/EntitlementSubList.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/securityConfig/entitlement/EntitlementSubList.scss
@@ -59,6 +59,10 @@
   }
 }
 
+.submitButtton{
+  margin-top: 10px;
+}
+
 .airflowSubscriptionListFullScreenmode {
   position: fixed;
   background-color: #252a33;
